--- a/public/config/config.json
+++ b/public/config/config.json
@@ -1,19 +1,19 @@
 {
-  "CONTRACT_ADDRESS": "0x62078f64B75F25B986eC53966f59485C2F9844D1",
-  "SCAN_LINK": "https://etherscan.io/address/0x62078f64B75F25B986eC53966f59485C2F9844D1",
+  "CONTRACT_ADDRESS": "0xfe85629866e3c0968f23e86d713815dae9de3b24",
+  "SCAN_LINK": "https://goerli.etherscan.io/address/0xfe85629866e3c0968f23e86d713815dae9de3b24",
   "NETWORK": {
-    "NAME": "Ethereum",
-    "SYMBOL": "ETH",
-    "ID": 1
+    "NAME": "Goerli",
+    "SYMBOL": "GoerliETH",
+    "ID": 5
   },
   "NFT_NAME": "Catland Kitten",
   "SYMBOL": "Catland Kitten",
-  "MAX_SUPPLY": 3333,
-  "DISPLAY_COST": 0.0169,
+  "MAX_SUPPLY": 10000,
+  "DISPLAY_COST": 0,
   "GAS_LIMIT": 145000,
   "MAX_PER_TX": 10,
   "MARKETPLACE": "Opeansea",
-  "MARKETPLACE_LINK": "https://opensea.io/collection/",
+  "MARKETPLACE_LINK": "https://opensea.io/collection/erc721aopensea",
   "Telegram": "https://",
   "Discord": "https://disboard.org/es/server/861313067291115541",
   "Twitter1": "https://twitter.com/Soujiang_ELTH",
