--- a/public/config/config.json
+++ b/public/config/config.json
@@ -1,6 +1,6 @@
 {
-  "CONTRACT_ADDRESS": "0xb04373108f92fa0b6d3c96078f56017b91fcf39a",
-  "SCAN_LINK": "https://goerli.etherscan.io/address/0xb04373108f92fa0b6d3c96078f56017b91fcf39a",
+  "CONTRACT_ADDRESS": "0xc00efb615fa7fae7f5827db3cf962edbfab9498d",
+  "SCAN_LINK": "https://goerli.etherscan.io/address/0xc00efb615fa7fae7f5827db3cf962edbfab9498d",
   "NETWORK": {
     "NAME": "Goerli",
     "SYMBOL": "GoerliETH",
@@ -8,12 +8,12 @@
   },
   "NFT_NAME": "Catland Kitten",
   "SYMBOL": "Catland Kitten",
-  "MAX_SUPPLY": 10000,
+  "MAX_SUPPLY": 100,
   "DISPLAY_COST": 0,
   "GAS_LIMIT": 145000,
   "MAX_PER_TX": 12,
   "MARKETPLACE": "Opeansea",
-  "MARKETPLACE_LINK": "https://opensea.io/collection/catlandkittenfemale",
+  "MARKETPLACE_LINK": "https://opensea.io/collection/",
   "Telegram": "https://",
   "Discord": "https://disboard.org/es/server/861313067291115541",
   "Twitter1": "https://twitter.com/Soujiang_ELTH",
