--- a/public/config/config.json
+++ b/public/config/config.json
@@ -1,18 +1,18 @@
 {
-  "CONTRACT_ADDRESS": "0xc00efb615fa7fae7f5827db3cf962edbfab9498d",
-  "SCAN_LINK": "https://goerli.etherscan.io/address/0xc00efb615fa7fae7f5827db3cf962edbfab9498d",
+  "CONTRACT_ADDRESS": "0x3C97a1D7dDc3631E2990bb949bcF73A74D648abC",
+  "SCAN_LINK": "https://goerli.etherscan.io/address/0x3C97a1D7dDc3631E2990bb949bcF73A74D648abC",
   "NETWORK": {
     "NAME": "Goerli",
     "SYMBOL": "GoerliETH",
     "ID": 5
   },
-  "NFT_NAME": "Catland Kitten",
-  "SYMBOL": "Catland Kitten",
-  "MAX_SUPPLY": 100,
+  "NFT_NAME": "prueba goerli",
+  "SYMBOL": "grl",
+  "MAX_SUPPLY": 10000,
   "DISPLAY_COST": 0,
   "GAS_LIMIT": 145000,
   "MAX_PER_TX": 12,
-  "MARKETPLACE": "Opeansea",
+  "MARKETPLACE": "Opensea",
   "MARKETPLACE_LINK": "https://opensea.io/collection/catlandkittenprueba",
   "Telegram": "https://",
   "Discord": "https://disboard.org/es/server/861313067291115541",
