--- a/public/config/config.json
+++ b/public/config/config.json
@@ -1,19 +1,19 @@
 {
-  "CONTRACT_ADDRESS": "0x3C97a1D7dDc3631E2990bb949bcF73A74D648abC",
-  "SCAN_LINK": "https://goerli.etherscan.io/address/0x3C97a1D7dDc3631E2990bb949bcF73A74D648abC",
+  "CONTRACT_ADDRESS": "0x9ba9148da3e346dc75334dffad188d345c68fb1f",
+  "SCAN_LINK": "https://goerli.etherscan.io/address/0x9ba9148da3e346dc75334dffad188d345c68fb1f",
   "NETWORK": {
     "NAME": "Goerli",
     "SYMBOL": "GoerliETH",
     "ID": 5
   },
-  "NFT_NAME": "prueba goerli",
-  "SYMBOL": "grl",
+  "NFT_NAME": "pruebagoerlicatlandkitten",
+  "SYMBOL": "pgck",
   "MAX_SUPPLY": 10000,
   "DISPLAY_COST": 0,
   "GAS_LIMIT": 145000,
   "MAX_PER_TX": 12,
-  "MARKETPLACE": "Opensea",
-  "MARKETPLACE_LINK": "https://opensea.io/collection/pruebagoerli",
+  "MARKETPLACE": "Opeansea",
+  "MARKETPLACE_LINK": "https://opensea.io/collection/pruebagoerlicatlandkitten",
   "Telegram": "https://",
   "Discord": "https://disboard.org/es/server/861313067291115541",
   "Twitter1": "https://twitter.com/Soujiang_ELTH",
