--- a/public/config/config.json
+++ b/public/config/config.json
@@ -6,7 +6,7 @@
     "SYMBOL": "GoerliETH",
     "ID": 5
   },
-  "NFT_NAME": "Catland Kitten Female",
+  "NFT_NAME": "Catland-Kitten-Female",
   "SYMBOL": "CatlandKittenOne",
   "MAX_SUPPLY": 10000,
   "DISPLAY_COST": 0,
