--- a/public/config/config.json
+++ b/public/config/config.json
@@ -18,6 +18,6 @@
   "Discord": "https://disboard.org/es/server/861313067291115541",
   "Twitter1": "https://twitter.com/Soujiang_ELTH",
   "Twitter2": "https://twitter.com/electhrons_elth",
-  "Twitter3": "https://twitter.com/lormirian_inf",
+  "Twitter3": "https://twitter.com/lormirian_elth",
   "SHOW_BACKGROUND": false
 }
