--- a/public/config/config.json
+++ b/public/config/config.json
@@ -1,19 +1,19 @@
 {
-  "CONTRACT_ADDRESS": "0xd53d8089067e0a18eeb5c31ef19bbab1ec259db2",
-  "SCAN_LINK": "https://goerli.etherscan.io/address/0xd53d8089067e0a18eeb5c31ef19bbab1ec259db2",
+  "CONTRACT_ADDRESS": "0x68c3d296d6548666fa8e66275432cc4fc4bfaefc",
+  "SCAN_LINK": "https://goerli.etherscan.io/address/0x68c3d296d6548666fa8e66275432cc4fc4bfaefc",
   "NETWORK": {
     "NAME": "Goerli",
     "SYMBOL": "GoerliETH",
     "ID": 5
   },
-  "NFT_NAME": "prueba cinco catlandkitten",
+  "NFT_NAME": "CATLAND KITTEN - FEMALE - DIC 2022 - BUILD YOUR NFT 2.0",
   "SYMBOL": "CatlandKittenOne",
   "MAX_SUPPLY": 10000,
   "DISPLAY_COST": 0,
   "GAS_LIMIT": 145000,
   "MAX_PER_TX": 12,
   "MARKETPLACE": "Opeansea",
-  "MARKETPLACE_LINK": "https://opensea.io/collection/pruebacincocatlandkitten",
+  "MARKETPLACE_LINK": "https://opensea.io/collection/CatlandKittenOneFemale",
   "Telegram": "https://",
   "Discord": "https://disboard.org/es/server/861313067291115541",
   "Twitter1": "https://twitter.com/Soujiang_ELTH",
