--- a/public/config/config.json
+++ b/public/config/config.json
@@ -1,19 +1,19 @@
 {
-  "CONTRACT_ADDRESS": "0x68c3d296d6548666fa8e66275432cc4fc4bfaefc",
-  "SCAN_LINK": "https://goerli.etherscan.io/address/0x68c3d296d6548666fa8e66275432cc4fc4bfaefc",
+  "CONTRACT_ADDRESS": "0x0f5f3b0f6d4ef15bdfe52be142e7c16732e5faaa",
+  "SCAN_LINK": "https://goerli.etherscan.io/address/0x0f5f3b0f6d4ef15bdfe52be142e7c16732e5faaa",
   "NETWORK": {
     "NAME": "Goerli",
     "SYMBOL": "GoerliETH",
     "ID": 5
   },
-  "NFT_NAME": "CATLAND KITTEN FEMALE",
+  "NFT_NAME": "CatlandKittenOne Female",
   "SYMBOL": "CatlandKittenOne",
   "MAX_SUPPLY": 10000,
   "DISPLAY_COST": 0,
   "GAS_LIMIT": 145000,
   "MAX_PER_TX": 12,
   "MARKETPLACE": "Opeansea",
-  "MARKETPLACE_LINK": "https://opensea.io/collection/CATLANDKITTENFEMALE",
+  "MARKETPLACE_LINK": "https://opensea.io/collection/CatlandKittenOneFemale",
   "Telegram": "https://",
   "Discord": "https://disboard.org/es/server/861313067291115541",
   "Twitter1": "https://twitter.com/Soujiang_ELTH",
