--- a/public/config/config.json
+++ b/public/config/config.json
@@ -6,14 +6,14 @@
     "SYMBOL": "GoerliETH",
     "ID": 5
   },
-  "NFT_NAME": "CatlandKittenOne Female",
+  "NFT_NAME": "CatlandKittenOne Female Diciembre 2022",
   "SYMBOL": "CatlandKittenOne",
   "MAX_SUPPLY": 10000,
   "DISPLAY_COST": 0,
   "GAS_LIMIT": 145000,
   "MAX_PER_TX": 12,
   "MARKETPLACE": "Opeansea",
-  "MARKETPLACE_LINK": "https://opensea.io/collection/CatlandKittenOneFemale",
+  "MARKETPLACE_LINK": "https://opensea.io/collection/CatlandKittenOne-Female-Dic2022",
   "Telegram": "https://",
   "Discord": "https://disboard.org/es/server/861313067291115541",
   "Twitter1": "https://twitter.com/Soujiang_ELTH",
