--- a/public/config/config.json
+++ b/public/config/config.json
@@ -1,19 +1,19 @@
 {
-  "CONTRACT_ADDRESS": "0x26354e1d2acd23fab68b64f420ed57297dc9c803",
-  "SCAN_LINK": "https://goerli.etherscan.io/address/0x26354e1d2acd23fab68b64f420ed57297dc9c803",
+  "CONTRACT_ADDRESS": "0x203bd5efb9f168e7fa77757e41e3146bbc4731c5",
+  "SCAN_LINK": "https://goerli.etherscan.io/address/0x203bd5efb9f168e7fa77757e41e3146bbc4731c5",
   "NETWORK": {
     "NAME": "Goerli",
     "SYMBOL": "GoerliETH",
     "ID": 5
   },
-  "NFT_NAME": "CatlandKittenOne Female Diciembre 2022",
+  "NFT_NAME": "catland kitten one female dic2022",
   "SYMBOL": "CatlandKittenOne",
   "MAX_SUPPLY": 10000,
   "DISPLAY_COST": 0,
   "GAS_LIMIT": 145000,
   "MAX_PER_TX": 12,
   "MARKETPLACE": "Opeansea",
-  "MARKETPLACE_LINK": "https://opensea.io/collection/CatlandKittenOne-Female-Dic2022",
+  "MARKETPLACE_LINK": "https://opensea.io/collection/catlandkittenonefemaledic2022",
   "Telegram": "https://",
   "Discord": "https://disboard.org/es/server/861313067291115541",
   "Twitter1": "https://twitter.com/Soujiang_ELTH",
