--- a/public/config/config.json
+++ b/public/config/config.json
@@ -1,19 +1,19 @@
 {
-  "CONTRACT_ADDRESS": "0x203bd5efb9f168e7fa77757e41e3146bbc4731c5",
-  "SCAN_LINK": "https://goerli.etherscan.io/address/0x203bd5efb9f168e7fa77757e41e3146bbc4731c5",
+  "CONTRACT_ADDRESS": "0x7b866ac8ee9bb48a7e242f162551646f9af91ca4",
+  "SCAN_LINK": "https://goerli.etherscan.io/address/0x7b866ac8ee9bb48a7e242f162551646f9af91ca4",
   "NETWORK": {
     "NAME": "Goerli",
     "SYMBOL": "GoerliETH",
     "ID": 5
   },
-  "NFT_NAME": "catland kitten one",
+  "NFT_NAME": "catlandkittenone female",
   "SYMBOL": "CatlandKittenOne",
   "MAX_SUPPLY": 10000,
   "DISPLAY_COST": 0,
   "GAS_LIMIT": 145000,
   "MAX_PER_TX": 12,
   "MARKETPLACE": "Opeansea",
-  "MARKETPLACE_LINK": "https://opensea.io/collection/catlandkittenonefem",
+  "MARKETPLACE_LINK": "https://opensea.io/collection/catlandkittenone-female",
   "Telegram": "https://",
   "Discord": "https://disboard.org/es/server/861313067291115541",
   "Twitter1": "https://twitter.com/Soujiang_ELTH",
