--- a/public/config/config.json
+++ b/public/config/config.json
@@ -1,20 +1,20 @@
 {
-  "CONTRACT_ADDRESS": "0x35ff0321d341c5ea04ff05f0916f92d7852aeab1",
-  "SCAN_LINK": "https://goerli.etherscan.io/address/0x35ff0321d341c5ea04ff05f0916f92d7852aeab1",
+  "CONTRACT_ADDRESS": "0x2c873b86bb862668c40692e4a2c0d433003b6b37",
+  "SCAN_LINK": "https://goerli.etherscan.io/address/0x2c873b86bb862668c40692e4a2c0d433003b6b37",
   "NETWORK": {
     "NAME": "Goerli",
     "SYMBOL": "GoerliETH",
     "ID": 5
   },
-  "NFT_NAME": "Catland Kitten Female Dic2022",
+  "NFT_NAME": "prueba seis catland kitten dic",
   "SYMBOL": "CatlandKittenOne",
   "MAX_SUPPLY": 10000,
   "DISPLAY_COST": 0,
   "GAS_LIMIT": 145000,
   "MAX_PER_TX": 12,
   "MARKETPLACE": "Opeansea",
-  "MARKETPLACE_LINK": "https://opensea.io/collection/Catland-Kitten-Female-Dic2022",
-  "Telegram": "https://",
+  "MARKETPLACE_LINK": "https://opensea.io/collection/pruebaseiscatlandkittendic",
+  "Telegram": "https://t.me/ELECTHRON_ELTH",
   "Discord": "https://disboard.org/es/server/861313067291115541",
   "Twitter1": "https://twitter.com/Soujiang_ELTH",
   "Twitter2": "https://twitter.com/electhrons_elth",
