--- a/public/config/config.json
+++ b/public/config/config.json
@@ -1,19 +1,19 @@
 {
-  "CONTRACT_ADDRESS": "0x2c873b86bb862668c40692e4a2c0d433003b6b37",
-  "SCAN_LINK": "https://goerli.etherscan.io/address/0x2c873b86bb862668c40692e4a2c0d433003b6b37",
+  "CONTRACT_ADDRESS": "0x3f43d52dad57d57c83ae44948ae9458e83859bf3",
+  "SCAN_LINK": "https://goerli.etherscan.io/address/0x3f43d52dad57d57c83ae44948ae9458e83859bf3",
   "NETWORK": {
     "NAME": "Goerli",
     "SYMBOL": "GoerliETH",
     "ID": 5
   },
-  "NFT_NAME": "prueba seis catland kitten dic",
-  "SYMBOL": "CatlandKittenOne",
+  "NFT_NAME": "catland kitten prueba",
+  "SYMBOL": "CatlandKittenprueba",
   "MAX_SUPPLY": 10000,
   "DISPLAY_COST": 0,
   "GAS_LIMIT": 145000,
   "MAX_PER_TX": 12,
   "MARKETPLACE": "Opeansea",
-  "MARKETPLACE_LINK": "https://opensea.io/collection/pruebaseiscatlandkittendic",
+  "MARKETPLACE_LINK": "https://opensea.io/collection/catland-kitten-prueba",
   "Telegram": "https://t.me/ELECTHRON_ELTH",
   "Discord": "https://disboard.org/es/server/861313067291115541",
   "Twitter1": "https://twitter.com/Soujiang_ELTH",
