--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "Catland Kitten",
-  "name": "Catland Kitten",
+  "short_name": "Catland Kitten prueba",
+  "name": "Catland Kitten prueba",
   "icons": [
     {
       "src": "images/favicon.ico",
