--- a/public/config/config.json
+++ b/public/config/config.json
@@ -1,19 +1,19 @@
 {
-  "CONTRACT_ADDRESS": "0x4b3361b7e0f2a3b7ccae3333c904b145cc24da48",
-  "SCAN_LINK": "https://goerli.etherscan.io/address/0x4b3361b7e0f2a3b7ccae3333c904b145cc24da48",
+  "CONTRACT_ADDRESS": "0x956a063d7bf03cc5277c354d83a7be79f0ad6579",
+  "SCAN_LINK": "https://goerli.etherscan.io/address/0x956a063d7bf03cc5277c354d83a7be79f0ad6579",
   "NETWORK": {
     "NAME": "Goerli",
     "SYMBOL": "GoerliETH",
     "ID": 5
   },
-  "NFT_NAME": "prueba seis caltand kittens",
-  "SYMBOL": "psck",
+  "NFT_NAME": "prueba siete catland kittens",
+  "SYMBOL": "psick",
   "MAX_SUPPLY": 100,
   "DISPLAY_COST": 0,
   "GAS_LIMIT": 145000,
   "MAX_PER_TX": 12,
   "MARKETPLACE": "Opeansea",
-  "MARKETPLACE_LINK": "https://opensea.io/collection/prueba-seis-caltand-kittens",
+  "MARKETPLACE_LINK": "https://opensea.io/collection/prueba-siete-catland-kittens",
   "Telegram": "https://t.me/ELECTHRON_ELTH",
   "Discord": "https://disboard.org/es/server/861313067291115541",
   "Twitter1": "https://twitter.com/Soujiang_ELTH",
