--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "pruebaocho",
-  "name": "prueba ocho catland kittens",
+  "short_name": "pruebanueve",
+  "name": "prueba nueve catland kittens",
   "icons": [
     {
       "src": "images/favicon.ico",
