--- a/public/config/config.json
+++ b/public/config/config.json
@@ -1,19 +1,19 @@
 {
-  "CONTRACT_ADDRESS": "0x087cd471ea0631f9a9f4e22b9a848d45ab2839d6",
-  "SCAN_LINK": "https://goerli.etherscan.io/address/0x087cd471ea0631f9a9f4e22b9a848d45ab2839d6",
+  "CONTRACT_ADDRESS": "0xc916bbd595b14475fec3dcf20ccbdee9269b576c",
+  "SCAN_LINK": "https://goerli.etherscan.io/address/0xc916bbd595b14475fec3dcf20ccbdee9269b576c",
   "NETWORK": {
     "NAME": "Goerli",
     "SYMBOL": "GoerliETH",
     "ID": 5
   },
-  "NFT_NAME": "prueba ocho catland kittens",
-  "SYMBOL": "pock",
-  "MAX_SUPPLY": 10000,
+  "NFT_NAME": "prueba nueve catland kittens",
+  "SYMBOL": "pruebanueve",
+  "MAX_SUPPLY": 100,
   "DISPLAY_COST": 0,
   "GAS_LIMIT": 145000,
   "MAX_PER_TX": 12,
   "MARKETPLACE": "Opeansea",
-  "MARKETPLACE_LINK": "https://opensea.io/collection/prueba-ocho-catland-kittens",
+  "MARKETPLACE_LINK": "https://opensea.io/collection/prueba-nueve-catland-kittens",
   "Telegram": "https://t.me/ELECTHRON_ELTH",
   "Discord": "https://disboard.org/es/server/861313067291115541",
   "Twitter1": "https://twitter.com/Soujiang_ELTH",
