--- a/public/config/config.json
+++ b/public/config/config.json
@@ -1,19 +1,19 @@
 {
-  "CONTRACT_ADDRESS": "0xd9e86ecd3b53274aa51480f3dc3cc3ed3a1b9d29",
-  "SCAN_LINK": "https://goerli.etherscan.io/address/0xd9e86ecd3b53274aa51480f3dc3cc3ed3a1b9d29",
+  "CONTRACT_ADDRESS": "0x0ba77437fddba057491c36c4bc9f9d7d9984efbb",
+  "SCAN_LINK": "https://goerli.etherscan.io/address/0x0ba77437fddba057491c36c4bc9f9d7d9984efbb",
   "NETWORK": {
     "NAME": "Goerli",
     "SYMBOL": "GoerliETH",
     "ID": 5
   },
-  "NFT_NAME": "prueba nueve catland kittens",
+  "NFT_NAME": "prueba diez catlandkittens",
   "SYMBOL": "pruebanueve",
   "MAX_SUPPLY": 100,
   "DISPLAY_COST": 0,
   "GAS_LIMIT": 145000,
   "MAX_PER_TX": 12,
   "MARKETPLACE": "Opeansea",
-  "MARKETPLACE_LINK": "https://opensea.io/collection/prueba-nueve-catland-kittens",
+  "MARKETPLACE_LINK": "https://opensea.io/collection/prueba-diez-catlandkittens",
   "Telegram": "https://t.me/ELECTHRON_ELTH",
   "Discord": "https://disboard.org/es/server/861313067291115541",
   "Twitter1": "https://twitter.com/Soujiang_ELTH",
