--- a/public/config/config.json
+++ b/public/config/config.json
@@ -1,19 +1,19 @@
 {
-  "CONTRACT_ADDRESS": "0x0ba77437fddba057491c36c4bc9f9d7d9984efbb",
-  "SCAN_LINK": "https://goerli.etherscan.io/address/0x0ba77437fddba057491c36c4bc9f9d7d9984efbb",
+  "CONTRACT_ADDRESS": "0x671b197b2d10b382f29989e937adb3ef6aac789f",
+  "SCAN_LINK": "https://goerli.etherscan.io/address/0x671b197b2d10b382f29989e937adb3ef6aac789f",
   "NETWORK": {
     "NAME": "Goerli",
     "SYMBOL": "GoerliETH",
     "ID": 5
   },
-  "NFT_NAME": "prueba diez catlandkittens",
-  "SYMBOL": "pruebanueve",
+  "NFT_NAME": "CatlandKitten Female dic2022",
+  "SYMBOL": "catlandkittensfem",
   "MAX_SUPPLY": 100,
   "DISPLAY_COST": 0,
   "GAS_LIMIT": 145000,
   "MAX_PER_TX": 12,
   "MARKETPLACE": "Opeansea",
-  "MARKETPLACE_LINK": "https://opensea.io/collection/prueba-diez-catlandkittens",
+  "MARKETPLACE_LINK": "https://opensea.io/collection/catlandKitten-female-dic2022",
   "Telegram": "https://t.me/ELECTHRON_ELTH",
   "Discord": "https://disboard.org/es/server/861313067291115541",
   "Twitter1": "https://twitter.com/Soujiang_ELTH",
