--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "pruebadiez",
-  "name": "prueba diez catlankittens",
+  "short_name": "catlandkittensfem",
+  "name": "CatlandKitten Female dic2022",
   "icons": [
     {
       "src": "images/favicon.ico",
